backend-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-app-v1
  namespace: backend
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    name: backend-app-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-v1
  namespace: backend
  labels:
    name: backend-app-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      name: backend-app-v1
  template:
    metadata:
      labels:
        name: backend-app-v1
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.8
        name: backend-app-v1
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-app-v2
  namespace: backend
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    name: backend-app-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-v2
  namespace: backend
  labels:
    name: backend-app-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      name: backend-app-v2
  template:
    metadata:
      labels:
        name: backend-app-v2
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.8
        name: backend-app-v2
        ports:
        - name: http
          containerPort: 8080
