envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-cfg
  namespace: backend
data:
  envoy.yaml: |-
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 80 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      weighted_clusters:
                        runtime_key_prefix: routing.traffic_split.backend
                        clusters:
                        - name: backend-app-v1_cluster
                          weight: 80
                        - name: backend-app-v2_cluster
                          weight: 20
              http_filters:
              - name: envoy.filters.http.router
      clusters:
      - name: backend-app-v1_cluster
        connect_timeout: 0.25s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: LEAST_REQUEST
        load_assignment:
          cluster_name: backend-app-v1_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: backend-app-v1
                    port_value: 8080
      - name: backend-app-v2_cluster
        connect_timeout: 0.25s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: LEAST_REQUEST
        load_assignment:
          cluster_name: backend-app-v2_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: backend-app-v2
                    port_value: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-envoy
  namespace: backend
  labels:
    name: backend-envoy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    name: backend-envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-envoy
  namespace: backend
  labels:
    name: backend-envoy
spec:
  selector:
    matchLabels:
      name: backend-envoy
  template:
    metadata:
      labels:
        name: backend-envoy
    spec:
      volumes:
      - name: envoy-cfg
        configMap:
          name: envoy-cfg
      containers:
      - name: backend-envoy
        image: envoyproxy/envoy:v1.14.1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        - name: envoy-admin
          containerPort: 9901
        volumeMounts:
        - mountPath: /etc/envoy
          readOnly: true
          name: envoy-cfg
